src/log/build_2025-03-26_13-11-21/api_waypoint/stderr.log
/usr/local/lib/python3.8/dist-packages/setuptools/dist.py:717: UserWarning: Usage of dash-separated 'script-dir' will not be supported in future versions. Please use the underscore name 'script_dir' instead
  warnings.warn(
  File "/home/jetson/ros2_ws/src/install/api_waypoint/lib/python3.8/site-packages/api_waypoint/api_waypoint_node.py", line 222
    msg.pose.orientation.y
    ^
SyntaxError: invalid syntax

